fix: content title color light

--- a/src/components/home/NewContent/index.module.css
+++ b/src/components/home/NewContent/index.module.css
@@ -84,7 +84,7 @@
   @apply xl:py-[8px] xl:px-[24px] xl:leading-[56px];
 }
 .titleText {
-  @apply flex items-center flex-row xl:gap-[16px] gap-[8px] whitespace-nowrap
+  @apply flex items-center flex-row xl:gap-[16px] gap-[8px]  flex-wrap break-words
 }
 .content {
   @apply w-full mx-auto rounded-b-[40px] text-white bg-black  px-[24px] flex flex-col lg:gap-0 gap-[60px];
